--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,25 @@
 spring:
   application:
     name: batch-performance
+  batch:
+    job:
+      name: batch-job
+      enabled: true
+    jdbc:
+      initialize-schema: always
   datasource:
     url: jdbc:h2:mem:batchdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password:
-    hikari:
-      maximum-pool-size: 10
-      minimum-idle: 5
   jpa:
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: true
-  batch:
-    job:
-      enabled: false
-    jdbc:
-      initialize-schema: always
-  sql:
-    init:
-      mode: never
 
 logging:
   level:
     org.springframework.batch: INFO
     org.hibernate.SQL: DEBUG
-    org.hibernate.orm.jdbc.bind: TRACE
