--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: batch-performance
   batch:
     job:
-      name: batch-job
+      name: orderJob
       enabled: true
     jdbc:
       initialize-schema: always
