add: 스케줄 cron으로 10초주기 로깅 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   batch:
     job:
       name: orderJob
-      enabled: true
+      enabled: false
     jdbc:
       initialize-schema: always
   datasource:
