fix: itemReader별로 디렉토리 정리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ job:
       step: orderProcessNoOffsetStep
       chunk-size: 1000
     performance:
-      repository:
+      jpa-paging-reader:
         name: orderProcessRepositoryJob
         step: orderProcessRepositoryStep
         chunk-size: 1000
